Smoothed out the tranisiton of changing the bio brain into the tech brain

--- a/be_3_9_1/BrainEmulationWebapp/apps/core/templates/base.html
+++ b/be_3_9_1/BrainEmulationWebapp/apps/core/templates/base.html
@@ -16,7 +16,8 @@
         <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/RGBELoader.js"></script>
         <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous"></script>
+        
         <link rel="stylesheet" type="text/css" href="{% static 'styles/windows-95-ui-kit/node_modules/bootstrap/dist/css/bootstrap.min.css' %}" />
         <script src="{% static 'styles/windows-95-ui-kit/node_modules/bootstrap/dist/js/bootstrap.min.js' %}"></script>
 
