Editing the database and adding first 10 orgs to it

--- a/be_3_9_1/BrainEmulationWebapp/apps/core/templates/frontpage.html
+++ b/be_3_9_1/BrainEmulationWebapp/apps/core/templates/frontpage.html
@@ -78,7 +78,7 @@
               {{org.title}} ({{org.category}} in {{org.country_hq}})
             </div>
                <div class="card-body">
-                  <p class="card-text">{{org.description}}</p>
+                  <p class="card-text">{{org.what_and_how}}</p>
                   <div class="text-right">
                     <a href="{% url 'org_profile' org.category.slug org.slug %}" class="btn btn-sm mr-2 btn-neonPink" type="button">
                       Details
